README.md update 8

--- a/game.html
+++ b/game.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="pong.css">
+  
+  <title>PONG GAME</title>
 </head>
 <body>
-  
+  <h1>PONG</h1>
+  <div class="game-board"></div>
+  <div class="ball"></div>
+  <div class="Paddle 1"></div>
+  <div class="Paddle 2"></div>
 </body>
 </html>
