test 3 to check for repo updates

--- a/game.html
+++ b/game.html
@@ -5,14 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pong.css">
-  
+  <script defer src="pong.js" charset="utf-8"></script>
   <title>PONG GAME</title>
 </head>
 <body>
-  <h1>PONG</h1>
-  <div class="game-board"></div>
+  <h1>pong</h1>
+  <div class="court"></div>
   <div class="ball"></div>
-  <div class="Paddle 1"></div>
-  <div class="Paddle 2"></div>
+  <div class="net"></div>
+  <div class="Player_1 Paddle"></div>
+  <div class="Player_2 Paddle"></div>
+  <div class="Player1_score">player 1</div>
+  <div class="Player2_score">player 2</div>
 </body>
 </html>
