added HTML CSS and JS

--- a/game.html
+++ b/game.html
@@ -8,14 +8,17 @@
   <script defer src="pong.js" charset="utf-8"></script>
   <title>PONG GAME</title>
 </head>
-<body>
-  <h1>pong</h1>
-  <div class="court"></div>
-  <div class="ball"></div>
-  <div class="net"></div>
-  <div class="Player_1 Paddle"></div>
-  <div class="Player_2 Paddle"></div>
-  <div class="Player1_score">player 1</div>
-  <div class="Player2_score">player 2</div>
-</body>
+  <body>
+    <h1>pong</h1>
+      <div id="container">
+        <div id="player_1_score">player 1</div>
+        <div id="computer_score">player 2</div>
+        <div class="paddle_1"></div>
+        <div class="computer_paddle"></div>
+        <div class="ball"></div>
+        <div class="net"></div>
+      </div>
+  </body>
 </html>
+
+
