updating README.md credits

--- a/game.html
+++ b/game.html
@@ -10,14 +10,12 @@
 </head>
   <body>
     <h1>pong</h1>
-      <div id="container">
-        <div id="player_1_score">player 1</div>
-        <div id="computer_score">player 2</div>
-        <div class="paddle_1"></div>
-        <div class="computer_paddle"></div>
-        <div class="ball"></div>
-        <div class="net"></div>
-      </div>
+        <div id="player_1_score">0</div>
+        <div id="computer_score">0</div>
+          <div class="paddle_1"></div>
+          <div class="computer_paddle"></div>
+          <div class="ball"></div>
+          <div class="net"></div>
   </body>
 </html>
 
