--- a/game.html
+++ b/game.html
@@ -10,12 +10,17 @@
 </head>
   <body>
     <h1>pong</h1>
+    
+      <div class="container">
         <div id="player_1_score">0</div>
         <div id="computer_score">0</div>
+    
+    <section class="court">
           <div class="paddle_1"></div>
           <div class="computer_paddle"></div>
           <div class="ball"></div>
           <div class="net"></div>
+    </section>
   </body>
 </html>
 
