game.html and pong.css grid updates

--- a/game.html
+++ b/game.html
@@ -6,21 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pong.css">
   <script defer src="pong.js" charset="utf-8"></script>
-  <title>PONG GAME</title>
+  <title>GO DOT GO!</title>
 </head>
   <body>
-    <h1>pong</h1>
-    
-      <div class="container">
-        <div id="player_1_score">0</div>
-        <div id="computer_score">0</div>
-    
-    <section class="court">
-          <div class="paddle_1"></div>
-          <div class="computer_paddle"></div>
-          <div class="ball"></div>
-          <div class="net"></div>
-    </section>
+    <h1>go dot go!</h1>
+    <br>
+    <br>
+      <div class="grid">
+        <div>square1</div>
+        <div>square2</div>
+        <div>square3</div>
+        <div>square4</div>
+        <div>square5</div>
+        <div>square6</div>
+        <div>square7</div>
+        <div>square8</div>
+        <div>square9</div>
+      </div>
   </body>
 </html>
 
