added pong.css variables

--- a/game.html
+++ b/game.html
@@ -13,15 +13,16 @@
     <br>
     <br>
       <div class="grid">
-        <div>square1</div>
-        <div>square2</div>
-        <div>square3</div>
-        <div>square4</div>
-        <div>square5</div>
-        <div>square6</div>
-        <div>square7</div>
-        <div>square8</div>
-        <div>square9</div>
+        <div id="square1" class="square">
+        </div>
+        <div id="square2" class="square"><div class="dot"></div></div>
+        <div id="square3" class="square"></div>
+        <div id="square4" class="square"></div>
+        <div id="square5" class="square"></div>
+        <div id="square6" class="square"></div>
+        <div id="square7" class="square"></div>
+        <div id="square8" class="square"></div>
+        <div id="square9" class="square"></div>
       </div>
   </body>
 </html>
