--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pong.css">
-  <script defer src="pong.js" charset="utf-8"></script>
+  <script defer src="game.js" charset="utf-8"></script>
   <title>GO DOT GO!</title>
 </head>
   <body>
