--- a/game.html
+++ b/game.html
@@ -24,6 +24,7 @@
         <div id="square8" class="square"></div>
         <div id="square9" class="square"></div>
       </div>
+      <button id="btn">reset</button>
   </body>
 </html>
 
