updated reset button and div in html

--- a/game.html
+++ b/game.html
@@ -13,9 +13,9 @@
     <br>
     <br>
       <div class="grid">
-        <div id="square1" class="square">
+        <div id="square1" class="square"><div class="dot"></div>
         </div>
-        <div id="square2" class="square"><div class="dot"></div></div>
+        <div id="square2" class="square"></div>
         <div id="square3" class="square"></div>
         <div id="square4" class="square"></div>
         <div id="square5" class="square"></div>
